core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/hof-arity-mismatch3.tessla
def f(a: Int) = (b: Int, c: Int) => a + b + c
def foo(g: (Int) => Int) = g(1)
out foo(f(0))